[gd_scene load_steps=14 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://audio_assets/1.wav" type="AudioStream" id=2]
[ext_resource path="res://audio_assets/2.wav" type="AudioStream" id=3]
[ext_resource path="res://audio_assets/6.wav" type="AudioStream" id=4]
[ext_resource path="res://audio_assets/5.wav" type="AudioStream" id=5]
[ext_resource path="res://audio_assets/4.wav" type="AudioStream" id=6]
[ext_resource path="res://audio_assets/3.wav" type="AudioStream" id=7]
[ext_resource path="res://audio_assets/10.wav" type="AudioStream" id=8]
[ext_resource path="res://audio_assets/11.wav" type="AudioStream" id=9]
[ext_resource path="res://audio_assets/12.wav" type="AudioStream" id=10]
[ext_resource path="res://audio_assets/8.wav" type="AudioStream" id=11]
[ext_resource path="res://audio_assets/9.wav" type="AudioStream" id=12]
[ext_resource path="res://audio_assets/7.wav" type="AudioStream" id=13]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 254.0
margin_right = 1024.0
margin_bottom = 274.0
alignment = 1

[node name="1" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 466.0
margin_right = 494.0
margin_bottom = 20.0
text = " 1 "

[node name="1" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer2/1"]
stream = ExtResource( 2 )
volume_db = -77.782
autoplay = true

[node name="2" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 498.0
margin_right = 526.0
margin_bottom = 20.0
text = " 2 "

[node name="2" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer2/2"]
stream = ExtResource( 3 )
volume_db = -77.782
autoplay = true

[node name="3" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 530.0
margin_right = 558.0
margin_bottom = 20.0
text = " 3 "

[node name="3" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer2/3"]
stream = ExtResource( 7 )
volume_db = -77.782
autoplay = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 278.0
margin_right = 1024.0
margin_bottom = 298.0
alignment = 1

[node name="4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 466.0
margin_right = 494.0
margin_bottom = 20.0
text = " 4 "

[node name="4" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer/4"]
stream = ExtResource( 6 )
volume_db = -77.782
autoplay = true

[node name="5" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 498.0
margin_right = 526.0
margin_bottom = 20.0
text = " 5 "

[node name="5" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer/5"]
stream = ExtResource( 5 )
volume_db = -77.782
autoplay = true

[node name="6" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 530.0
margin_right = 558.0
margin_bottom = 20.0
text = " 6 "

[node name="6" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer/6"]
stream = ExtResource( 4 )
volume_db = -77.782
autoplay = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 322.0
alignment = 1

[node name="7" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 466.0
margin_right = 494.0
margin_bottom = 20.0
text = " 7 "

[node name="7" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer3/7"]
stream = ExtResource( 13 )
volume_db = -77.782
autoplay = true

[node name="8" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 498.0
margin_right = 526.0
margin_bottom = 20.0
text = " 8 "

[node name="8" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer3/8"]
stream = ExtResource( 11 )
volume_db = -77.782
autoplay = true

[node name="9" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 530.0
margin_right = 558.0
margin_bottom = 20.0
text = " 9 "

[node name="9" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer3/9"]
stream = ExtResource( 12 )
volume_db = -77.782
autoplay = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 326.0
margin_right = 1024.0
margin_bottom = 346.0
alignment = 1

[node name="10" type="Button" parent="VBoxContainer/HBoxContainer4"]
margin_left = 466.0
margin_right = 494.0
margin_bottom = 20.0
text = "10"

[node name="10" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer4/10"]
stream = ExtResource( 8 )
volume_db = -77.782
autoplay = true

[node name="11" type="Button" parent="VBoxContainer/HBoxContainer4"]
margin_left = 498.0
margin_right = 526.0
margin_bottom = 20.0
text = "11"

[node name="11" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer4/11"]
stream = ExtResource( 9 )
volume_db = -77.782
autoplay = true

[node name="12" type="Button" parent="VBoxContainer/HBoxContainer4"]
margin_left = 530.0
margin_right = 558.0
margin_bottom = 20.0
text = "12"

[node name="12" type="AudioStreamPlayer2D" parent="VBoxContainer/HBoxContainer4/12"]
stream = ExtResource( 10 )
volume_db = -77.782
autoplay = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/10" to="." method="_on_10_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/11" to="." method="_on_11_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/12" to="." method="_on_12_pressed"]
